# codebase-cortex

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/actions/cortex/: action.yml
docs/: agents.md  architecture.md  ci-cd.md  cli-reference.md  configuration.md  contributing.md  embeddings.md  mcp-server.md  notion-integration.md
src/codebase_cortex/: __init__.py  cli.py  config.py  graph.py  llm_detect.py  mcp_client.py  mcp_server.py  metrics.py  state.py
src/codebase_cortex/agents/: base.py  code_analyzer.py  doc_validator.py  doc_writer.py  output_router.py  section_router.py  semantic_finder.py  sprint_reporter.py  task_creator.py  toc_generator.py
src/codebase_cortex/auth/: callback_server.py  oauth.py  token_store.py
src/codebase_cortex/backends/: __init__.py  local_markdown.py  meta_index.py  notion_backend.py  protocol.py
src/codebase_cortex/embeddings/: chunker.py  clustering.py  indexer.py  store.py
src/codebase_cortex/git/: diff_parser.py  github_client.py
src/codebase_cortex/notion/: bootstrap.py  page_cache.py
src/codebase_cortex/utils/: file_lock.py  json_parsing.py  logging.py  rate_limiter.py  section_parser.py
tests/: conftest.py  test_agents.py  test_backends.py  test_bootstrap.py  test_cli.py  test_config.py  test_diff_parser.py  test_embeddings.py  test_file_lock.py  test_graph.py  test_mcp_integration.py  test_mcp_server.py  test_metrics.py  test_page_cache.py  test_pipeline_nodes.py  test_section_parser.py  test_state.py
