[project]
name = "codebase-cortex"
version = "0.1.0"
description = "AI-powered documentation autopilot — commit code, docs update themselves. Five LangGraph agents analyze diffs, find related code via FAISS embeddings, and sync Notion pages through MCP."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sailalith Sarupuri", email = "sarupurisailalith@gmail.com" },
]
keywords = [
    "notion",
    "documentation",
    "mcp",
    "model-context-protocol",
    "langgraph",
    "agents",
    "multi-agent",
    "code-analysis",
    "embeddings",
    "faiss",
    "semantic-search",
    "git",
    "automation",
    "developer-tools",
    "docs-as-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.1",
    "langchain-openai>=0.3",
    "mcp>=1.0",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "hdbscan>=0.8",
    "PyGithub>=2.0",
    "gitpython>=3.1",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
codebase-cortex = "codebase_cortex.cli:cli"
cortex = "codebase_cortex.cli:cli"

[project.urls]
Homepage = "https://github.com/sarupurisailalith/codebase-cortex"
Repository = "https://github.com/sarupurisailalith/codebase-cortex"
Documentation = "https://github.com/sarupurisailalith/codebase-cortex/tree/main/docs"
Issues = "https://github.com/sarupurisailalith/codebase-cortex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_cortex"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
